--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 
 # SEO settings
-title: "Think"
-title2: "space" # default: ""
-description: "Just another minimalist Jekyll theme for technical writing."
+title: "Portalonthe.Rocks"
+# title2: "space" # default: ""
+description: "Blog around CRM Portals"
 keywords: "Jekyll, theme, free, download, SEO, blog, web, minimalist, thinkspace"
-url: http://heiswayi.github.io/thinkspace # site url
-baseurl: "" # apply repo name if use it under gh-pages branch
+url: http://portalontherocks.github.io/blog # site url
+baseurl: "blog" # apply repo name if use it under gh-pages branch
 # baseurl: null # apply null if repo name is something like username.github.io
 
 google_analytics: UA-XXXXX-XX
 repo: http://github.com/heiswayi/thinkspace
-disqus_shortname: "hnbloggithub"
-twitter_username: "HeiswayiNrird"
+disqus_shortname: "portalontherocks"
+
 comments: true
 
 # Build settings
@@ -29,21 +29,21 @@ sass:
 
 # Author settings
 author:
-  name     : "John Doe"
-  job      : "Software Engineer"
-  bio      : "1+1=3 is always TRUE in my world, a balance between binary and reality."
-  thumb    : /images/author.jpg
-  email    : hnrird@gmail.com
-  url      : http://heiswayi.github.io
-  github   : http://github.com/heiswayi
-  twitter  : http://twitter.com/HeiswayiNrird
-  facebook : https://www.facebook.com/heiswayi.nrird
-  linkedin : http://linkedin.com/in/nrird
+  name     : "Tino Rabe"
+  job      : "Learner"
+  bio      : "Knowing a little more about the unknown everyday."
+ # thumb    : /images/author.jpg
+  email    : rabetino@me.com
+ # url      : http://heiswayi.github.io
+ # github   : http://github.com/portalontherocks
+ # twitter  : http://twitter.com/HeiswayiNrird
+ # facebook : https://www.facebook.com/heiswayi.nrird
+ # linkedin : http://linkedin.com/in/nrird
 
 # social settings
-og_locale: "en_US"
-twitter_card: "summary_large_image"
-twitter_site: "@HeiswayiNrird"
+og_locale: "de_DE"
+# twitter_card: "summary_large_image"
+# twitter_site: "@HeiswayiNrird"
 
 gems:
   - bourbon
