--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Portalonthe.Rocks"
 # title2: "space" # default: ""
 description: "Blog around CRM Portals"
 keywords: "Jekyll, theme, free, download, SEO, blog, web, minimalist, thinkspace"
-url: http://portalontherocks.github.io/blog # site url
+url: /blog # site url
 baseurl: "portalontherocks.github.io/blog" # apply repo name if use it under gh-pages branch
 # baseurl: null # apply null if repo name is something like username.github.io
 
