--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ title: "Portalonthe.Rocks"
 description: "Blog around CRM Portals"
 keywords: "Jekyll, theme, free, download, SEO, blog, web, minimalist, thinkspace"
 url: /blog # site url
-baseurl: "portalontherocks.github.io/blog" # apply repo name if use it under gh-pages branch
-# baseurl: null # apply null if repo name is something like username.github.io
+# baseurl: "portalontherocks.github.io/blog" # apply repo name if use it under gh-pages branch
+baseurl: null # apply null if repo name is something like username.github.io
 
 google_analytics: UA-XXXXX-XX
 repo: http://github.com/heiswayi/thinkspace
