--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: /blog # site url
 baseurl: null # apply null if repo name is something like username.github.io
 
 google_analytics: UA-XXXXX-XX
-repo: http://github.com/heiswayi/thinkspace
+repo: http://github.com/portalontherocks/blog
 disqus_shortname: "portalontherocks"
 
 comments: true
