--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: null # apply null if repo name is something like username.github.io
 
 google_analytics: UA-XXXXX-XX
 repo: http://github.com/portalontherocks/blog
-disqus_shortname: "portalonthe.rocks"
+disqus_shortname: "portalontherocks"
 
 comments: true
 
